<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 android:orientation="vertical"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent">
<android.support.v4.widget.SwipeRefreshLayout
    android:id="@+id/srl"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_index"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</android.support.v4.widget.SwipeRefreshLayout>
    <android.support.v7.widget.Toolbar
        android:id="@+id/tb"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_behavior="com.ascend.wangfeng.latte.ec.main.index.TranslucentBehavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/ic_scan"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="start"
                android:gravity="center"
                android:paddingRight="8dp"
                android:text="@string/ic_scan"
                android:textSize="24sp"
                android:textColor="@android:color/white"/>
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/ic_search"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_weight="4"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:hint="@string/search"
                android:paddingLeft="16dp"/>
            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/ic_message"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingLeft="8dp"
                android:text="@string/ic_message"
                android:textSize="24sp"
                android:textColor="@android:color/white"/>
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

</android.support.design.widget.CoordinatorLayout>